# mcu-humanoid-colab

./: .gitignore  LICENSE  README.md  bootstrap.py  prepare.py  program.md  pyproject.toml  requirements-local.txt  requirements.txt  train.py
configs/: default.json  npz_template.json  smoke.json
docs/: article_draft.md  methodology_report.html
mcu_autoresearch/: .gitignore  README.md  agent_prompt.md  bootstrap.py  log_result.py  prepare.py  program.md  results.tsv  run_claude_autoresearch.py  run_codex_autoresearch.py  train.py
mcu_autoresearch/workspace/: active_config.json
notebooks/: MCU_Humanoid_Colab.ipynb
sample_data/: README.md  libero_real_config.json  libero_real_medium.npz  libero_real_medium_config.json  libero_real_sample.npz
scripts/: build_gr00t_npz.py  build_real_npz.py  export_synthetic_npz.py  inspect_gr00t_dataset.py  plot_results.py  run_cross_task_matrix.py  run_experiment.py  run_leave_one_out.py  run_multiseed.py  validate_npz.py
src/mcu_humanoid_colab/: __init__.py  config.py  data.py  experiment.py  memory.py  models.py  schema.py  synthetic.py
