[project]
name = "mcu-autoresearch"
version = "0.1.0"
description = "Root autoresearch loop for MCU retrieval experiments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imageio>=2.36",
    "imageio-ffmpeg>=0.6",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.2",
    "pillow>=10",
    "pyarrow>=15",
    "torch>=2.5",
]

[tool.uv]
package = false
